Add reservations docs
