# swagger/v1/swagger.yaml
@@ -62,6 +62,371 @@ paths:
                   - address
                   - email
                   - password
+  "/reservations":
+    get:
+      summary: list user reservations
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    type:
+                      type: string
+                    attributes:
+                      type: object
+                      properties:
+                        id:
+                          type: number
+                        user_id:
+                          type: number
+                        days:
+                          type: number
+                        total_price:
+                          type: string
+                        created_at:
+                          type: string
+                        videogame:
+                          type: object
+                          properties:
+                            id:
+                              type: number
+                            name:
+                              type: string
+                            photo:
+                              type: string
+                            description:
+                              type: string
+                            price_per_day:
+                              type: string
+        '401':
+          description: Unauthorized - Only users can see their own reservations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+    post:
+      summary: create reservation
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      parameters: []
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  type:
+                    type: string
+                  attributes:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                      user_id:
+                        type: number
+                      days:
+                        type: number
+                      total_price:
+                        type: string
+                      created_at:
+                        type: string
+                      videogame:
+                        type: object
+                        properties:
+                          id:
+                            type: number
+                          name:
+                            type: string
+                          photo:
+                            type: string
+                          description:
+                            type: string
+                          price_per_day:
+                            type: string
+        '401':
+          description: Unauthorized - Only users can create their own reservations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reservation:
+                  type: object
+                  properties:
+                    videogame_id:
+                      type: number
+                    days:
+                      type: number
+                    total_price:
+                      type: number
+                  required:
+                  - videogame_id
+                  - days
+                  - total_price
+  "/reservations/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show reservation
+      tags:
+      - Reservations
+      responses:
+        '200':
+          description: Successful
+        '401':
+          description: Unauthorized - Only users can see their own reservations
+        '404':
+          description: Not found
+    patch:
+      summary: update reservation
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      parameters: []
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  type:
+                    type: string
+                  attributes:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                      user_id:
+                        type: number
+                      days:
+                        type: number
+                      total_price:
+                        type: string
+                      created_at:
+                        type: string
+                      videogame:
+                        type: object
+                        properties:
+                          id:
+                            type: number
+                          name:
+                            type: string
+                          photo:
+                            type: string
+                          description:
+                            type: string
+                          price_per_day:
+                            type: string
+        '401':
+          description: Unauthorized - Only users can see their own reservations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reservation:
+                  type: object
+                  properties:
+                    videogame_id:
+                      type: number
+                    days:
+                      type: number
+                    total_price:
+                      type: number
+    put:
+      summary: update reservation
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      parameters: []
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  type:
+                    type: string
+                  attributes:
+                    type: object
+                    properties:
+                      id:
+                        type: number
+                      user_id:
+                        type: number
+                      days:
+                        type: number
+                      total_price:
+                        type: string
+                      created_at:
+                        type: string
+                      videogame:
+                        type: object
+                        properties:
+                          id:
+                            type: number
+                          name:
+                            type: string
+                          photo:
+                            type: string
+                          description:
+                            type: string
+                          price_per_day:
+                            type: string
+        '401':
+          description: Unauthorized - Only users can see their own reservations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reservation:
+                  type: object
+                  properties:
+                    videogame_id:
+                      type: number
+                    days:
+                      type: number
+                    total_price:
+                      type: number
+    delete:
+      summary: delete reservation
+      tags:
+      - Reservations
+      security:
+      - Bearer: []
+      responses:
+        '200':
+          description: Successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '401':
+          description: Unauthorized - Only users can see their own reservations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
   "/login":
     post:
       summary: log in user
@@ -175,6 +540,8 @@ paths:
       summary: create videogame
       tags:
       - Videogames
+      security:
+      - Bearer: []
       parameters: []
       responses:
         '201':
@@ -291,6 +658,8 @@ paths:
       summary: update videogame
       tags:
       - Videogames
+      security:
+      - Bearer: []
       parameters: []
       responses:
         '200':
@@ -365,6 +734,8 @@ paths:
       summary: update videogame
       tags:
       - Videogames
+      security:
+      - Bearer: []
       parameters: []
       responses:
         '200':
@@ -439,6 +810,8 @@ paths:
       summary: delete videogame
       tags:
       - Videogames
+      security:
+      - Bearer: []
       responses:
         '200':
           description: Successful
